# qrmagic2

./: README.md  package-lock.json  package.json  prompt.md  vite.config.js
.github/workflows/: build.yml
qrmagic/src/: types.ts
qrmagic/src-tauri/: Cargo.toml  tauri.conf.json
qrmagic/src/routes/: +page.svelte
src/: App.svelte  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/routes/: +page.svelte  TableRow.svelte
