[package]
name = "qr_image_sorter"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2021"
description = "QR‑code image sorter built with Tauri and Svelte"
license = "MIT"
repository = ""

[dependencies]
tauri = { version = "2.0.0", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
exif = "0.7"
image = "0.24"
bardecoder = "0.5"
base64 = "0.21"

[build-dependencies]
tauri-build = "2.0.0"
