[package]
name = "qrmagic"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2021"
description = "QR‑code image sorter built with Tauri and Svelte"
license = "AGPL3"
repository = ""

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
kamadak-exif = "0.6"
image = "0.24"
bardecoder = "0.5"
base64 = "0.21"
tauri-plugin-fs = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
