[package]
name = "qrmagic2"
version = "0.2.1"
authors = ["Kevin Murray <foss@gekkonid.com>"]
edition = "2021"
description = "QR‑code image sorter built with Tauri and Svelte"
license = "AGPL3"
repository = ""

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
kamadak-exif = "0.6"
image = "0.25"
rxing = "0.8"
base64 = "0.21"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
rayon = "1"
heic-decoder = { git = "https://github.com/imazen/heic" }

[build-dependencies]
tauri-build = { version = "2", features = [] }
